; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_get_default_midi.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_get_default_midi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIDI_DEFAULT_DRIVER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"winmm\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"alsa\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"null\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @config_get_default_midi() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @MIDI_DEFAULT_DRIVER, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %8 [
    i32 128, label %5
    i32 130, label %6
    i32 129, label %7
  ]

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %9

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %9

7:                                                ; preds = %0
  br label %8

8:                                                ; preds = %0, %7
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %9

9:                                                ; preds = %8, %6, %5
  %10 = load i8*, i8** %1, align 8
  ret i8* %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
